--- a/camera/package.json
+++ b/camera/package.json
@@ -14,7 +14,10 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-image-picker": "^5.3.1"
+    "react-native-image-picker": "^5.3.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-permissions": "~12.1.1",
+    "react-native-view-shot": "3.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
