--- a/camera/package.json
+++ b/camera/package.json
@@ -18,7 +18,9 @@
     "react-native": "0.71.6",
     "react-native-image-picker": "^5.3.1",
     "react-native-share": "^8.2.2",
-    "react-native-view-shot": "3.5.0"
+    "react-native-view-shot": "3.5.0",
+    "expo-sharing": "~11.2.2",
+    "expo-media-library": "~15.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
